page(load): drag and drop component

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/DEsimas/FaceAI#readme",
   "dependencies": {
+    "@bem-react/classname": "^1.6.0",
+    "@bem-react/classnames": "^1.3.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
