--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@bem-react/classname": "^1.6.0",
     "@bem-react/classnames": "^1.3.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "css-loader": "^6.10.0",
     "dotenv-webpack": "^8.0.1",
     "html-loader": "^5.0.0",
