--- a/package.json
+++ b/package.json
@@ -1,46 +1,50 @@
 {
-  "name": "faceai",
-  "version": "1.0.0",
-  "description": "Frontend for an application comparing fases using an AI",
-  "main": "index.js",
-  "scripts": {
-    "build:dev": "npx webpack --env mode=development",
-    "build:prod": "npx webpack --env mode=production",
-    "serve:dev": "npm run build:dev && npx webpack serve --env mode=development --env api=http://26.113.24.68:8000 --open",
-    "serve:prod": "npm run build:prod && npx webpack serve --env mode=production"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DEsimas/FaceAI.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DEsimas/FaceAI/issues"
-  },
-  "homepage": "https://github.com/DEsimas/FaceAI#readme",
-  "dependencies": {
-    "@bem-react/classname": "^1.6.0",
-    "@bem-react/classnames": "^1.3.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.58",
-    "@types/react-dom": "^18.2.19",
-    "@types/uuid": "^9.0.8",
-    "css-loader": "^6.10.0",
-    "dotenv-webpack": "^8.0.1",
-    "html-loader": "^5.0.0",
-    "html-webpack-plugin": "^5.6.0",
-    "sass": "^1.71.1",
-    "sass-loader": "^14.1.1",
-    "style-loader": "^3.3.4",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.3.3",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2"
-  }
+    "name": "faceai",
+    "version": "1.0.0",
+    "description": "Frontend for an application comparing fases using an AI",
+    "main": "index.js",
+    "scripts": {
+        "build:dev": "npx webpack --env mode=development",
+        "build:prod": "npx webpack --env mode=production",
+        "serve:dev": "npm run build:dev && npx webpack serve --env mode=development --env api=http://26.113.24.68:8000 --open",
+        "serve:prod": "npm run build:prod && npx webpack serve --env mode=production"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/DEsimas/FaceAI.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/DEsimas/FaceAI/issues"
+    },
+    "homepage": "https://github.com/DEsimas/FaceAI#readme",
+    "dependencies": {
+        "@bem-react/classname": "^1.6.0",
+        "@bem-react/classnames": "^1.3.10",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "uuid": "^9.0.1"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.58",
+        "@types/react-dom": "^18.2.19",
+        "@types/uuid": "^9.0.8",
+        "@typescript-eslint/eslint-plugin": "^7.3.1",
+        "@typescript-eslint/parser": "^7.3.1",
+        "css-loader": "^6.10.0",
+        "dotenv-webpack": "^8.0.1",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react": "^7.34.1",
+        "html-loader": "^5.0.0",
+        "html-webpack-plugin": "^5.6.0",
+        "sass": "^1.71.1",
+        "sass-loader": "^14.1.1",
+        "style-loader": "^3.3.4",
+        "ts-loader": "^9.5.1",
+        "typescript": "^5.3.3",
+        "webpack": "^5.90.3",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.0.2"
+    }
 }
