--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@bem-react/classname": "^1.6.0",
         "@bem-react/classnames": "^1.3.10",
         "react": "^18.2.0",
+        "react-bus": "^3.0.0",
         "react-dom": "^18.2.0",
         "uuid": "^9.0.1"
     },
