--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
         "eol-last": [
             "error",
             "always"
-        ]
+        ],
+        "@typescript-eslint/consistent-type-imports": "error"
     }
 }
