eslint: trailing comma

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
             "error",
             "always"
         ],
-        "@typescript-eslint/consistent-type-imports": "error"
+        "@typescript-eslint/consistent-type-imports": "error",
+        "comma-dangle": "error"
     }
 }
