--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "plugin:react/recommended"
     ],
     "parser": "@typescript-eslint/parser",
+    "ignorePatterns" : ["**/*.js", "**/*.scss", "**/*.html", "**/*.jpg", "**/*.jpeg", "**/*.png", "**/*.ico", "**/*.json", "**/*.txt", "**/*.md"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
@@ -17,6 +18,11 @@
         "@typescript-eslint",
         "react"
     ],
+    "settings": {
+        "react": {
+            "version": "18.2.0"
+        }
+    },
     "rules": {
         "indent": [
             "error",
