--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-bus": "^3.0.0",
         "react-dom": "^18.2.0",
         "react-draggable": "^4.4.6",
+        "react-remove-scroll": "^2.5.9",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
