--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
         "plugin:react/recommended"
     ],
     "parser": "@typescript-eslint/parser",
-    "ignorePatterns" : ["**/*.svg", "**/*.js", "**/*.scss", "**/*.html", "**/*.jpg", "**/*.jpeg", "**/*.png", "**/*.ico", "**/*.json", "**/*.yaml", "**/*.txt", "**/*.md"],
+    "ignorePatterns" : ["**/*.ejs", "**/*.svg", "**/*.js", "**/*.scss", "**/*.html", "**/*.jpg", "**/*.jpeg", "**/*.png", "**/*.ico", "**/*.json", "**/*.yaml", "**/*.txt", "**/*.md"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
