--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
         "react-dom": "^18.2.0",
         "react-draggable": "^4.4.6",
         "react-remove-scroll": "^2.5.9",
+        "react-resizable": "^3.0.5",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@types/node": "^20.11.30",
         "@types/react": "^18.2.58",
         "@types/react-dom": "^18.2.19",
+        "@types/react-resizable": "^3.0.7",
         "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^7.3.1",
         "@typescript-eslint/parser": "^7.3.1",
